--- a/package.json
+++ b/package.json
@@ -43,10 +43,14 @@
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^16.13.1",
     "react-elastic-carousel": "^0.7.5",
+    "react-grid-gallery": "^0.5.5",
+    "react-image-gallery": "^1.0.9",
     "react-material-ui-carousel": "^1.8.3",
     "react-multistep": "^5.1.0",
     "react-pdf": "^5.2.0",
+    "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.1.2",
+    "react-s3": "^1.3.1",
     "react-slide-routes": "^0.13.0",
     "react-step-wizard": "^5.3.5",
     "react-swipeable-views": "^0.13.9",
